# spacetraders-python-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
spacetraders_python_sdk/: __init__.py  client.py
spacetraders_python_sdk/agents/: __init__.py  agents.py
spacetraders_python_sdk/contracts/: __init__.py  contracts.py
spacetraders_python_sdk/factions/: __init__.py  factions.py
spacetraders_python_sdk/fleet/: __init__.py  fleet.py
spacetraders_python_sdk/models/: __init__.py  models.py
spacetraders_python_sdk/systems/: __init__.py  systems.py
tests/: test_agents.py  test_contacts.py  test_factions.py  test_fleet.py  test_status.py  test_systems.py
